archived/manifests/not-deployed/authentik/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: acme-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - authentik.hacksm.net
    secretName: authentik-cert
  rules:
  - host: authentik.hacksm.net
    http:
      paths:
      - backend:
          service:
            name: authentik
            port:
              number: 9100
        path: /
        pathType: Prefix
